# ChangeLog for games-emulation/sdlmame
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2

  15 May 2008; Michał Ziąbkowski <mziab@o2.pl> +sdlmame-0.125_p1.ebuild:
  Bumped.

  12 May 2008; Michał Ziąbkowski <mziab@o2.pl> +sdlmame-0.125.ebuild:
  Bumped.

  04 May 2008; Michał Ziąbkowski <mziab@o2.pl> +sdlmame-0.124_p5.ebuild,
  +files/joymap.dat, +files/mame.ini.in, +files/vector.ini:
  Bumped. Now based on the ebuild from portage.

  26 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> -files/0.123,
  -files/paths-0.121.1.patch, -files/0.123/dipports.patch,
  -sdlmame-0.123.ebuild, -files/0.123/inpview.patch, -sdlmame-0.124.ebuild,
  -files/0.123/wolf.patch, -sdlmame-0.124.3.ebuild:
  Removed. Use the ebuilds from the official tree.

  18 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.124.2.ebuild,
  +sdlmame-0.124.3.ebuild:
  Bumped. Removed previous test ver.

  12 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> sdlmame-0.123.ebuild,
  sdlmame-0.124.ebuild, sdlmame-0.124.2.ebuild:
  Removed minimal USE flag. It served no real purpose.

  12 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.124.1.ebuild,
  +sdlmame-0.124.2.ebuild:
  Added new sdlmame test version, removed old one.

  06 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.123.2.ebuild,
  +sdlmame-0.124.1.ebuild:
  Added latest development version. Removed 0.123.2.

  26 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> +sdlmame-0.124.ebuild:
  Bumped to latest stable ver. No wolfmame patches for now. Will bump them
  once they are available.

  27 Feb 2008; Michał "mziab" Ziąbkowski <mziab@o2.pl> +sdlmame-0.123.ebuild,
  sdlmame-0.123.2.ebuild:
  Added ebuild for the stable version with readded wolfmame patches and fixed USE="minimal".
  Removed USE="minimal" from test version, as it didn't work anyway.

  25 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> +sdlmame-0.123.2.ebuild:
  Bumped thanks to Michał "mziab" Ziąbkowski. Removed old files.
