@@ -2,10 +2,8 @@ AUX joymap.dat 223 RMD160 d86c536a5d33bec9ecd6efbee2f7389835495328 SHA1 011d631b
 AUX mame.ini.in 5962 RMD160 6eb4c315b29d5e6da24a40ad94a646bb56b27998 SHA1 fadb0546bdac23e7162833fad60533c0a4fcf772 SHA256 6205c738b7e57ead9c05885bdaeb3ebfb143bec9dc1de7a97016b791bea532d8
 AUX vector.ini 116 RMD160 e63ed40b21a2426b28571d514933efab6ccce7e8 SHA1 c6615ce44d08b89a65435dfe7e0af9ac6d8459df SHA256 408aeaaffcb2ecccd20db457f22d2d5efa930c0f62a92987b0fbefaf6c038c23
 DIST sdlmame-manpages.tar.gz 14400 RMD160 14660470488458a8897a8a924c12f7ab961d6729 SHA1 279fbf37668282c0e4e86d62a29f5ec53fa0ab1a SHA256 507240258dfb816fbfddc674c5995a126c7a975158c2aad1ada8cb064c5e3d08
-DIST sdlmame0124u5.zip 16423984 RMD160 c128096024e0bd39fca223d20230192a50c783ee SHA1 6336a4440ad587e0a9936e89929379685acf89e0 SHA256 d099e2f53e9c0b24d9c796a7381c4804fb20d28719826e990e5b35c5906837fd
 DIST sdlmame0125.zip 16403503 RMD160 c0fc73f995ce5a11a260d2a89857132ccd279a0b SHA1 ce336396ddf87e327ef28230495d3a39159fcf3f SHA256 688d4a5d327636b21dd9a93de1083b08a6ed3fc201a0bc6e331aed30f55a5ed6
 DIST sdlmame0125u1.zip 16516570 RMD160 799ad52d908e5d1d4da15d1a8a801034a79a59a4 SHA1 37cadfb57213f084995bac3105e9ed866618c773 SHA256 0106aaa154a7dd5201497058cd1cdd38db08a4c84b8f5306878af1ab141202a0
-EBUILD sdlmame-0.124_p5.ebuild 3897 RMD160 40f7bc783e1c3d1f9e96574514161557ecdfafe3 SHA1 333c8fede0c155dccb7756f4761ff8e66751a07d SHA256 ebb143a7a0a497a2007b26ceccdfa7426b6f05cd92b9617875725e7c7349569c
 EBUILD sdlmame-0.125.ebuild 3897 RMD160 40f7bc783e1c3d1f9e96574514161557ecdfafe3 SHA1 333c8fede0c155dccb7756f4761ff8e66751a07d SHA256 ebb143a7a0a497a2007b26ceccdfa7426b6f05cd92b9617875725e7c7349569c
 EBUILD sdlmame-0.125_p1.ebuild 3897 RMD160 40f7bc783e1c3d1f9e96574514161557ecdfafe3 SHA1 333c8fede0c155dccb7756f4761ff8e66751a07d SHA256 ebb143a7a0a497a2007b26ceccdfa7426b6f05cd92b9617875725e7c7349569c
-MISC ChangeLog 2445 RMD160 35fb226a1b7a5ce70219dee4e76f92fcc6266959 SHA1 a866230813b9a0d10ad9ec4b7073fe386995a472 SHA256 d2c3c68a969c4f708d5b66a50dc21e9404bb168c367d081f78651505e041ca78
+MISC ChangeLog 2546 RMD160 5cceb7bbcb6d55b9adb02e33f357deb0de23b220 SHA1 7d18f3c564c37d1b92022d03ef521a2718929227 SHA256 6b5b93a7790f7bc9222e32478cba1fadb22274d9cca4ffd308f78611b94480ef
